Few new practice codes added